npx husky-init && yarn install

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "author": "Kaze Shindo <kaze.bknb@outlook.jp>",
   "license": "MIT",
   "devDependencies": {
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "lint-staged": "^12.1.4",
     "prettier": "^2.5.1"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
