run code formatter when files staged

--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   },
   "scripts": {
     "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.dart": [
+      "fvm flutter format"
+    ],
+    "*.@(json|yaml)": [
+      "prettier --write"
+    ]
   }
 }
