--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   auto_route: ^3.2.0
+  hooks_riverpod: ^1.0.3
+  flutter_hooks: ^0.18.1
 
 dev_dependencies:
   flutter_test:
