--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   auto_route: ^3.2.0
   hooks_riverpod: ^1.0.3
   flutter_hooks: ^0.18.1
+  json_serializable: ^6.1.3
+  freezed_annotation: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +48,7 @@ dev_dependencies:
   build_runner: ^2.1.7
   flutter_gen_runner: ^4.1.3
   auto_route_generator: ^3.2.0
+  freezed: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
