--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   flutter_gen_runner: ^4.1.3
   auto_route_generator: ^3.2.0
   freezed: ^1.1.0
+  fimber: ^0.6.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
